fix: overflow-x

--- a/src/page-components/FeatureScreenSection/styles.module.less
+++ b/src/page-components/FeatureScreenSection/styles.module.less
@@ -101,6 +101,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 24px;
+  overflow-x: hidden;
 
   @media screen and (max-width: @divide-1023) {
     grid-template-columns: repeat(2, 1fr);
