--- a/src/page-components/HomePageSection/FirstScreenSection/styles.module.less
+++ b/src/page-components/HomePageSection/FirstScreenSection/styles.module.less
@@ -5,13 +5,15 @@
 .firstScreenSectionWrap {
   background: @bg-7;
   position: relative;
-  width: 100%;
+  width: 100vw;
   top: -102px;
   display: flex;
   flex-direction: column;
   height: 1060px;
+  overflow-x: hidden;
   .headerContainerBg {
     width: 100%;
+    max-width: 100%;
     height: 1060px;
     top: -102px;
     position: absolute;
