--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -82,10 +82,14 @@ a {
   background: @bg-7;
   min-width: 360px;
   @media screen and (max-width: @divide-1023) {
-    overflow-x: hidden;
+    // overflow-x: hidden;
   }
 }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+}
 .empty-container {
   min-width: @page-min-width;
   background-color: '#4D83EF'; 
